--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Created by https://www.toptal.com/developers/gitignore/api/java,scala,sbt,intellij
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,scala,sbt,intellij
 
@@ -156,3 +155,6 @@ project/plugins/project/
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/java,scala,sbt,intellij
+
+.bloop/
+.metals/
